Adding http request

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,7 +28,7 @@ spring:
           schema-generation:
             create-source: metadata
             scripts:
-              action: update
+              action: create
               create-target: create.sql
       hibernate:
         ddl-auto: update
